# gps-monitor

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: config.rs  error.rs  lib.rs  main.rs  monitor.rs  waypoint.rs
src/display/: gui.rs  mod.rs  terminal.rs
src/display/gui/: app.rs  map_window.rs  mod.rs  panels.rs  satellites.rs  settings.rs  skyplot.rs  track_recorder.rs  waypoint_dialog.rs
src/gps/: data.rs  gpsd.rs  mod.rs  nmea.rs  windows.rs
src/map/: mod.rs  tile_cache.rs
